@@ -17,8 +17,7 @@
 ** along with this program; if not, write to the Free Software
 ** Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301, USA.
 **/
-?>
-<?php
+
 
 function zbx_is_callable($var) {
 	foreach ($var as $e) {
@@ -589,4 +588,3 @@ class CsetupWizard extends CForm {
 		}
 	}
 }
-?>
